rearranged some stuff to be more generic

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -1,6 +1,6 @@
 <mat-horizontal-stepper linear labelPosition="bottom" #stepper class="mat-stepper-lg">
 	<mat-step>
-		<ec-select-report-type (next)="stepper.next()"></ec-select-report-type>
+		<ec-select-report-type></ec-select-report-type>
 	</mat-step>
 	<ng-template matStepperIcon="edit">
 		<span class="fa fa-pen"></span>
