--- a/src/app/report/report-parameter/report-a2/report-a2.component.html
+++ b/src/app/report/report-parameter/report-a2/report-a2.component.html
@@ -4,7 +4,7 @@
 <mat-form-field *ngIf="formControl" appearance="fill">
 	<mat-chip-list #chipList>
 		<mat-chip
-			*ngFor="let uvci of selectedUvcis"
+			*ngFor="let uvci of reportService.parameter[ReportType.A2].uvcis"
 			[ngClass]="{error: errorUvcis.includes(uvci)}"
 			(removed)="remove(uvci)">
 			{{uvci}}
@@ -16,7 +16,8 @@
 			[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
 			(matChipInputTokenEnd)="add($event)">
 	</mat-chip-list>
-	<mat-error *ngIf="formControl.invalid || errorUvcis.length">{{'reports.uvci.format.error' | translate}}</mat-error>
+	<mat-error *ngIf="tooManyUvcis">{{'reports.uvci.too-many' | translate}}</mat-error>
+	<mat-error *ngIf="(formControl.invalid || errorUvcis.length) && !tooManyUvcis">{{'reports.uvci.format.error' | translate}}</mat-error>
 </mat-form-field>
 <button id="reset-a2-input" mat-button (click)="resetInput()" obButton="tertiary">
 	{{ "reports.a2.reset-input" | translate }}
