implemented first concept of report success and error handling

--- a/src/app/report/report.component.html
+++ b/src/app/report/report.component.html
@@ -5,6 +5,12 @@
 	<mat-step>
 		<ec-report-parameter></ec-report-parameter>
 	</mat-step>
+	<mat-step>
+		<ec-report-generation></ec-report-generation>
+	</mat-step>
+	<mat-step>
+		<ec-report-end></ec-report-end>
+	</mat-step>
 	<ng-template matStepperIcon="edit">
 		<span class="fa fa-pen"></span>
 	</ng-template>
