--- a/src/app/report/report-parameter/report-a2/report-a2.component.html
+++ b/src/app/report/report-parameter/report-a2/report-a2.component.html
@@ -14,10 +14,13 @@
 			[formControl]="formControl"
 			[matChipInputFor]="chipList"
 			[matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-			(matChipInputTokenEnd)="add($event)">
+			(matChipInputTokenEnd)="add($event)"
+			(paste)="onPaste($event)"
+		>
 	</mat-chip-list>
-	<mat-error *ngIf="tooManyUvcis">{{'reports.uvci.too-many' | translate}}</mat-error>
-	<mat-error *ngIf="(formControl.invalid || errorUvcis.length) && !tooManyUvcis">{{'reports.uvci.format.error' | translate}}</mat-error>
+	<mat-error *ngIf="formControl.hasError('tooManyUvcis')">{{'reports.uvci.too-many' | translate}}</mat-error>
+	<mat-error *ngIf="formControl.hasError('format')">{{'reports.uvci.format.error' | translate}}</mat-error>
+	<mat-error *ngIf="formControl.hasError('required')">{{'i18n.validation.required' | translate}}</mat-error>
 </mat-form-field>
 <button id="reset-a2-input" mat-button (click)="resetInput()" obButton="tertiary">
 	{{ "reports.a2.reset-input" | translate }}
