--- a/src/app/report/report-end/report-end.component.html
+++ b/src/app/report/report-end/report-end.component.html
@@ -1,22 +1,22 @@
 <ng-container *ngIf="reportService.reportFinished$ | async as status">
 	<ng-container [ngSwitch]="status">
 		<ng-container *ngSwitchCase="GenerationResponseStatus.OK">
-			<h3>{{'reports.generation.success.title' | translate}}</h3>
+			<h3>{{ "reports.generation.success.title" | translate }}</h3>
 			<div class="info-container">
 				<mat-icon svgIcon="checkmark"></mat-icon>
 				<div class="text-container">
-					<p>{{'reports.generation.success' | translate}}</p>
+					<p>{{ "reports.generation.success" | translate }}</p>
 				</div>
 			</div>
 		</ng-container>
 		<ng-container *ngSwitchCase="GenerationResponseStatus.INCOMPLETE">
-			<h3>{{'reports.generation.success.title' | translate}}</h3>
+			<h3>{{ "reports.generation.success.title" | translate }}</h3>
 			<div class="info-container">
 				<mat-icon svgIcon="checkmark"></mat-icon>
 				<div class="text-container">
-					<p>{{'reports.generation.success' | translate}}</p>
+					<p>{{ "reports.generation.success" | translate }}</p>
 					<ob-alert [type]="'warning'">
-						<span>{{'reports.generation.success.warning' | translate}}</span>
+						<span>{{ "reports.generation.success.warning" | translate }}</span>
 					</ob-alert>
 				</div>
 			</div>
@@ -25,7 +25,13 @@
 </ng-container>
 <div class="stepper-footer">
 	<section class="stepper-footer-content">
-		<button id="report-generate-next" mat-button (click)="stepper.steps.get(0).select()" obButton="primary" class="right">
+		<button
+			id="report-generate-next"
+			mat-button
+			(click)="stepper.steps.get(0).select()"
+			obButton="primary"
+			class="right"
+		>
 			{{ "reports.generate.new" | translate }}
 		</button>
 	</section>
