added link to the parameter-help file

--- a/src/app/report/select-report-type/select-report-type.component.html
+++ b/src/app/report/select-report-type/select-report-type.component.html
@@ -261,10 +261,10 @@
 					<p>
 						{{ "reports.param-help.description" | translate }}
 					</p>
+					<a [icon]="'right'" href="https://www2.cms.admin.ch/content/dam/bag/en/dokumente/mt/k-und-i/aktuelle-ausbrueche-pandemien/2019-nCoV/parameter-explanation.pdf">
+						{{ "reports.param-help.download" | translate }}
+					</a>
 				</mat-card-content>
-				<mat-card-actions>
-					<button mat-button obButton="primary">{{ "reports.param-help.download" | translate }}</button>
-				</mat-card-actions>
 			</mat-card>
 		</div>
 	</div>
