changed parameter-help link

--- a/src/app/report/select-report-type/select-report-type.component.html
+++ b/src/app/report/select-report-type/select-report-type.component.html
@@ -261,7 +261,7 @@
 					</p>
 					<a
 						[icon]="'right'"
-						href="https://www2.cms.admin.ch/content/dam/bag/en/dokumente/mt/k-und-i/aktuelle-ausbrueche-pandemien/2019-nCoV/parameter-explanation.pdf"
+						href="https://www.bag.admin.ch/dam/bag/en/dokumente/mt/k-und-i/aktuelle-ausbrueche-pandemien/2019-nCoV/parameter-explanation.pdf.download.pdf/Parameter%20Explanation_Covid-Zertifikat.pdf"
 					>
 						{{ "reports.param-help.download" | translate }}
 					</a>
