--- a/src/app/report/report-parameter/report-parameter.component.html
+++ b/src/app/report/report-parameter/report-parameter.component.html
@@ -1,6 +1,7 @@
-<ng-container *ngIf="reportService.selectedReportType" [formGroup]="formGroup">
+<ng-container *ngIf="reportService.selectedReportType">
 	<ng-container [ngSwitch]="reportService.selectedReportType">
-		<ec-report-a2 [reportFormGroup]="formGroup" *ngSwitchCase="ReportType.A2"></ec-report-a2>
+		<ec-report-a2 *ngSwitchCase="ReportType.A2"></ec-report-a2>
+		<ec-report-a7 *ngSwitchCase="ReportType.A7"></ec-report-a7>
 	</ng-container>
 	<div class="stepper-footer">
 		<section class="stepper-footer-content">
@@ -15,7 +16,6 @@
 			</button>
 			<button
 				id="report-generate-next"
-				[disabled]="formGroup.get(reportService.selectedReportType).invalid"
 				mat-button
 				(click)="goNext()"
 				obButton="primary"
