added missing translation

--- a/src/app/report/report-parameter/report-a7/report-a7.component.html
+++ b/src/app/report/report-parameter/report-a7/report-a7.component.html
@@ -13,7 +13,7 @@
 				<mat-datepicker #pickerFrom></mat-datepicker>
 				<mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
 				<mat-error *ngIf="a7FormGroup.get('from').hasError('startDateAfterEndDate')">
-					Test
+					{{ "reports.a7.startDateBeforeEndDate" | translate }}
 				</mat-error>
 			</mat-form-field>
 			<mat-form-field obErrorMessages>
