VACCINECER-2248 add privacy statement into footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -84,4 +84,9 @@
 			"footer.legal" | translate
 		}}</a>
 	</ng-template>
+	<ng-template #obFooterLink>
+		<a [href]="'footer.privacyStatement.url' | translate" target="_blank" role="menuitem" rel="noopener noreferrer">{{
+			"footer.privacyStatement" | translate
+		}}</a>
+	</ng-template>
 </ob-master-layout>
