format: clean code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,8 +85,12 @@
 		}}</a>
 	</ng-template>
 	<ng-template #obFooterLink>
-		<a [href]="'footer.privacyStatement.url' | translate" target="_blank" role="menuitem" rel="noopener noreferrer">{{
-			"footer.privacyStatement" | translate
-		}}</a>
+		<a
+			[href]="'footer.privacyStatement.url' | translate"
+			target="_blank"
+			role="menuitem"
+			rel="noopener noreferrer"
+			>{{ "footer.privacyStatement" | translate }}</a
+		>
 	</ng-template>
 </ob-master-layout>
