--- a/src/app/report/report-parameter/report-a7/report-a7.component.html
+++ b/src/app/report/report-parameter/report-a7/report-a7.component.html
@@ -33,7 +33,7 @@
 	<fieldset>
 		<legend>{{ "reports.a7.selected-dataroom" | translate }}</legend>
 		<mat-form-field obErrorMessages>
-			<mat-select formControlName="dataRoom">
+			<mat-select formControlName="canton">
 				<mat-option *ngFor="let dataRoom of auth.authorizedDataRooms$ | async"
 							[value]="dataRoom">{{ ("dataroom." + (dataRoom | lowercase)) | translate }}</mat-option>
 			</mat-select>
